...

export type HeaderProps = { toggleDrawer: () => void, setIsSearching: (v: boolean) => void }
export const HeaderComponent: React.FunctionComponent<HeaderProps> = ({ toggleDrawer, setIsSearching }) => {
    return (
        <>
            <Left>
                <Button testID="side-menu-button" style={DefaultTheme.backgroundColorPrimaryColor} transparent onPress={() => toggleDrawer()}>
                    <Icon name='menu' />
                </Button>
            </Left>
            <Right>
                <Button testID="search-button" style={DefaultTheme.backgroundColorPrimaryColor} transparent onPress={() => setIsSearching(true)}>
                    <Icon name='search' />
...

    return (
        <SafeAreaView style={{ flex: 1 }}>
            <FlatList
                data={[
                    { testID: 'sidemenu-home-button',routeName: 'Home', name: 'Home', data: {} },
                    { testID: 'sidemenu-expert-button',routeName: 'Expert', name: 'Profile', data: { id: user?.id } },
                ]}
                renderItem={({ item }) => (
                    <ListItem testID={item.testID} noBorder onPress={() => navigate(item.routeName, item.data)}>
                        <Text>{item.name}</Text>
                    </ListItem>
                )}
...
