...

  if (!userToShow) return null;

  return (
    <>
      <View style={DefaultTheme.backgroundColorPrimaryDarkColor}>
        <H2 testID='expert-username' style={DefaultTheme.onPrimaryColorText}>{`${userToShow.username.charAt(0).toUpperCase()}${userToShow.username.slice(1)}`}</H2>
        <Markdown style={MarkdownStyles}>
          {userToShow.aboutme}
        </Markdown>
      </View>

      <List horizontal={true} dataArray={userToShow.videos} keyExtractor={(item, index) => index.toString()} renderRow={v => (
...
          )}>
        </FlatList>
      </SafeAreaView>

      {userToShow.id === currentUser?.id ? (
        <View style={{ marginBottom: 5 }}>
          <Button testID="expert-edit-button" style={DefaultTheme.backgroundColorPrimaryColor} rounded onPress={() => navigate('EditExpert', { id: currentUser.id })}>
            <Text>Edit</Text>
          </Button>
        </View>
      ) : null}
    </>
  );
...
