...
          </TouchableOpacity>
        </ListItem>
      )}>
      </List>

      <View style={{ marginBottom: 5 }}>
        <Button testID="offering-seeexpert-button" style={DefaultTheme.backgroundColorPrimaryColor} rounded onPress={() => navigate('Expert', { id: offeringToShow.user.id })}>
          <Text>See Expert</Text>
        </Button>
      </View>
      {offeringToShow.user.id === user?.id ? (
        <View style={{ marginTop: 5 }}>
          <Button testID="offering-edit-button" style={DefaultTheme.backgroundColorPrimaryColor} rounded onPress={() => navigate('EditOffering', { id: offeringToShow.id })}>
            <Text>Edit</Text>
          </Button>
        </View>
      ) : null}
    </>
  );
...
